  - Increased the migration rate from the open borders idea by 10%
  - Added tourism income to the Kaaba for whomever controls it to represent the massive amount of tourism and pilgrims to the area
  - Pre-Accession Assistance now cancels once you become a member of the European Union

 Bugfix:
  - Fixed a German MIO giving piercing despite Small Arms not having piercing
  - Fixed the wrong colour in the display names in the laws
  - Fixed the Romanization decision not properly adding cores to the new states in Morocco
  - Fixed the Ideological Power for Communists actually increase worker requirement by 25% instead of the intended 15%
  - Fixed Cuban focus "Revive Cuban Metallurgy" having a hidden effect that adds the industrial complex
  - Fixed a random Serbian division starting in the southern Indian Ocean
  - Fixed the infinite political power exploit giving infinite political power when you have international investments reinvestment going
  - Fixed the spamming error from the Syrian on actions
  - Fixed the "Complete Full Use" not actually being able to be taken if you are on Neo-Imperialism instead of Global Interventionism
  - Fixed the "Air Space Incursion" event showing up if you haven't researched anything that unlocks SHORAD Sites
  - Fixed the "Restoration" focus for Brazil not actually setting your name to Empire of Brazil
  - Fixed "tech_info_special_description_bottom_margin" spamming in the error log
  - Fixed the buttons in the navies menu not properly changing when selected for aggressiveness, splitting for repain and otherwise
  - Fixed immigration not scaling properly with unemployment
  - Fixed the "Workers Party Alignment" decisions not showing up properly in the decision menu
  - Fixed the Total Workforce modifier from GDP/C getting too low and causing the workforce to go extremely negative
  - Fixed Israel focus "Manama Economic Conference" not being able to be taken if Palestine is not a subject