@@ -102,6 +102,14 @@ opinion_modifiers = {
 		value = 10
 		decay = 2.5
 	}
+	given_gift_ten = {
+		value = 15
+		decay = 2.5
+	}
+	given_gift_fifteen = {
+		value = 25
+		decay = 2.5
+	}
 	supported_opposition = {
 		value = -10
 		decay = 0.5
