@@ -6715,7 +6715,7 @@ technologies = {
 		}
 
 		category_mot_inf = {
-			armor_value = 0.05
+			hardness = 0.05
 		}
 
 		doctrine = yes
@@ -6790,8 +6790,7 @@ technologies = {
 		}
 
 		category_mot_inf = {
-			hardness = 0.05
-			armor_value = 0.05
+			hardness = 0.075
 		}
 
 		path = {
