@@ -10,9 +10,18 @@ country_event = {
 	hidden = yes
 	immediate = {
 		log = "[GetDateText]: [This.GetName]: influence.11.a executed"
-		set_variable = { gift_sum = debt }
-		multiply_variable = { gift_sum = 0.05 }
-		clamp_variable = { var = gift_sum min = 1 max = 5000 } # Max Gift Amount Period
+		set_variable = { five_gift_sum = gdp_total }
+		multiply_variable = { five_gift_sum = 0.05 }
+		clamp_variable = { var = five_gift_sum min = 1 max = 5000 } # Max Gift Amount Period
+
+		set_variable = { ten_gift_sum = gdp_total }
+		multiply_variable = { ten_gift_sum = 0.10 }
+		clamp_variable = { var = ten_gift_sum min = 1 max = 5000 } # Max Gift Amount Period
+
+		set_variable = { fifteen_gift_sum = gdp_total }
+		multiply_variable = { fifteen_gift_sum = 0.15 }
+		clamp_variable = { var = fifteen_gift_sum min = 1 max = 5000 } # Max Gift Amount Period
+
 		# event_target is set in the targeting scope
 		event_target:influence_sender = { country_event = { id = influence.1 } }
 	}
@@ -27,24 +36,27 @@ country_event = {
 	picture = GFX_united_states_dollar
 	is_triggered_only = yes
 
-	#Give it
+	# Send 5% of GDP as Economic Aid
 	option = {
 		name = influence.1.a
 		log = "[GetDateText]: [This.GetName]: influence.1.a executed"
 
-		custom_effect_tooltip = influence_0_TT
-		subtract_from_variable = { treasury = FROM.gift_sum }
+		set_temp_variable = { temp_amount_gift_sum = FROM.five_gift_sum }
+		multiply_temp_variable = { temp_amount_gift_sum = -1 }
+		custom_effect_tooltip = economic_aid_influence_value_TT
+		add_to_variable = { treasury = temp_amount_gift_sum }
 		FROM = {
+			set_country_flag = sending_five_percent_of_gdp_@PREV
 			effect_tooltip = {
 				custom_effect_tooltip = accept_money
-				set_temp_variable = { percent_change = 3 }
+				set_temp_variable = { percent_change = 2 }
 				set_temp_variable = { tag_index = ROOT.id }
 				set_temp_variable = { influence_target = THIS.id }
 				change_influence_percentage = yes
 				reverse_add_opinion_modifier = { target = FROM modifier = given_gift }
 			}
 
-			country_event = { id = News_influence.0 }
+			country_event = { id = News_influence.0 days = 1 }
 		}
 
 		ai_chance = {
@@ -71,9 +83,57 @@ country_event = {
 		}
 	}
 
-	#Let's not bother
+	# Send 10% of GDP as Economic Aid
 	option = {
 		name = influence.1.b
+		log = "[GetDateText]: [This.GetName]: influence.1.c executed"
+		set_temp_variable = { temp_amount_gift_sum = FROM.ten_gift_sum }
+		multiply_temp_variable = { temp_amount_gift_sum = -1 }
+		custom_effect_tooltip = economic_aid_influence_value_TT
+		add_to_variable = { treasury = temp_amount_gift_sum }
+		FROM = {
+			set_country_flag = sending_ten_percent_of_gdp_@PREV
+			effect_tooltip = {
+				custom_effect_tooltip = accept_money
+				set_temp_variable = { percent_change = 4 }
+				set_temp_variable = { tag_index = ROOT.id }
+				set_temp_variable = { influence_target = THIS.id }
+				change_influence_percentage = yes
+				reverse_add_opinion_modifier = { target = FROM modifier = given_gift_ten }
+			}
+
+			country_event = { id = News_influence.0 days = 1 }
+		}
+	}
+
+	# Send 15% of GDP as Economic Aid
+	option = {
+		name = influence.1.c
+		log = "[GetDateText]: [This.GetName]: influence.1.d executed"
+
+		set_temp_variable = { temp_amount_gift_sum = FROM.fifteen_gift_sum }
+		multiply_temp_variable = { temp_amount_gift_sum = -1 }
+		custom_effect_tooltip = economic_aid_influence_value_TT
+		add_to_variable = { treasury = temp_amount_gift_sum }
+		FROM = {
+			set_country_flag = sending_fifteen_percent_of_gdp_@PREV
+			effect_tooltip = {
+				custom_effect_tooltip = accept_money
+				set_temp_variable = { percent_change = 6 }
+				set_temp_variable = { tag_index = ROOT.id }
+				set_temp_variable = { influence_target = THIS.id }
+				change_influence_percentage = yes
+				reverse_add_opinion_modifier = { target = FROM modifier = given_gift_fifteen }
+			}
+
+			country_event = { id = News_influence.0 days = 1 }
+		}
+
+	}
+
+	#Let's not bother
+	option = {
+		name = influence.1.e
 		log = "[GetDateText]: [This.GetName]: influence.1.b executed"
 		FROM = { ROOT = { clr_country_flag = recently_sent_aid@PREV } }
 
@@ -108,13 +168,55 @@ country_event = {
 	option = {
 		name = News_influence.0.a
 		log = "[GetDateText]: [This.GetName]: News_influence.0.a executed"
-		custom_effect_tooltip = influence_from_0_TT
-		add_to_variable = { treasury = gift_sum } # Adds Gift Sum
-		set_temp_variable = { percent_change = 2 }
-		set_temp_variable = { tag_index = FROM.id }
-		set_temp_variable = { influence_target = THIS.id }
-		change_influence_percentage = yes
-		add_opinion_modifier = { target = FROM modifier = given_gift }
+
+		if = {
+			limit = { has_country_flag = sending_five_percent_of_gdp_@FROM }
+
+			set_temp_variable = { temp_amount_gift_sum = five_gift_sum }
+			custom_effect_tooltip = economic_aid_influence_value_TT
+			add_to_variable = { treasury = temp_amount_gift_sum }
+
+			custom_effect_tooltip = accept_money
+			set_temp_variable = { percent_change = 2 }
+			set_temp_variable = { tag_index = ROOT.id }
+			set_temp_variable = { influence_target = THIS.id }
+			change_influence_percentage = yes
+			add_opinion_modifier = { target = FROM modifier = given_gift }
+		}
+		else_if = {
+			limit = { has_country_flag = sending_ten_percent_of_gdp_@FROM }
+
+			set_temp_variable = { temp_amount_gift_sum = ten_gift_sum }
+			custom_effect_tooltip = economic_aid_influence_value_TT
+			add_to_variable = { treasury = temp_amount_gift_sum }
+
+			custom_effect_tooltip = accept_money
+			set_temp_variable = { percent_change = 4 }
+			set_temp_variable = { tag_index = ROOT.id }
+			set_temp_variable = { influence_target = THIS.id }
+			change_influence_percentage = yes
+			add_opinion_modifier = { target = FROM modifier = given_gift_ten }
+		}
+		else_if = {
+			limit = { has_country_flag = sending_fifteen_percent_of_gdp_@FROM }
+
+			set_temp_variable = { temp_amount_gift_sum = fifteen_gift_sum }
+			custom_effect_tooltip = economic_aid_influence_value_TT
+			add_to_variable = { treasury = temp_amount_gift_sum }
+
+
+			custom_effect_tooltip = accept_money
+			set_temp_variable = { percent_change = 6 }
+			set_temp_variable = { tag_index = ROOT.id }
+			set_temp_variable = { influence_target = THIS.id }
+			change_influence_percentage = yes
+			add_opinion_modifier = { target = FROM modifier = given_gift_fifteen }
+		}
+
+		clr_country_flag = sending_five_percent_of_gdp_@FROM
+		clr_country_flag = sending_ten_percent_of_gdp_@FROM
+		clr_country_flag = sending_fifteen_percent_of_gdp_@FROM
+
 		# Generic Response
 		FROM = { country_event = { id = diplomatic_response.1 } }
 		# AI Section
@@ -136,6 +238,11 @@ country_event = {
 				divide_temp_variable = { domestic_influence_amount_tmp = 100 }
 				factor = domestic_influence_amount_tmp
 			}
+			# If they have a high opinion of us they'll take it
+			modifier = {
+				factor = 1.25
+				check_variable = { ROOT.opinion@FROM > 100 }
+			}
 			# Massive Nations such as USA/China should be less likely to take on Economic Aid
 			modifier = {
 				factor = 0.75
@@ -149,8 +256,8 @@ country_event = {
 			modifier = {
 				factor = 0
 				OR = {
-					check_variable = { interest_rate < 5.50 }
-					check_variable = { debt_ratio < 1.00 }
+					check_variable = { interest_rate < 4.00 }
+					check_variable = { debt_ratio < 0.50 }
 				}
 			}
 		}
@@ -175,8 +282,27 @@ country_event = {
 
 		# Returns Funds to the Influencer Nation
 		FROM = {
-			custom_effect_tooltip = influence_from_0_TT
-			add_to_variable = { treasury = PREV.gift_sum }
+			if = {
+				limit = { has_country_flag = sending_five_percent_of_gdp_@FROM }
+
+				set_temp_variable = { temp_amount_gift_sum = five_gift_sum }
+				custom_effect_tooltip = economic_aid_influence_value_TT
+				add_to_variable = { treasury = temp_amount_gift_sum }
+			}
+			else_if = {
+				limit = { has_country_flag = sending_ten_percent_of_gdp_@FROM }
+
+				set_temp_variable = { temp_amount_gift_sum = ten_gift_sum }
+				custom_effect_tooltip = economic_aid_influence_value_TT
+				add_to_variable = { treasury = temp_amount_gift_sum }
+			}
+			else_if = {
+				limit = { has_country_flag = sending_fifteen_percent_of_gdp_@FROM }
+
+				set_temp_variable = { temp_amount_gift_sum = fifteen_gift_sum }
+				custom_effect_tooltip = economic_aid_influence_value_TT
+				add_to_variable = { treasury = temp_amount_gift_sum }
+			}
 			country_event = { id = diplomatic_response.2 }
 		}
 		ai_chance = {
