@@ -68,7 +68,7 @@
  influence_create_new_auto_request_TT: "§H[ROOT.GetNameWithFlag]§! will auto-influence §H[PREV.GetNameWithFlag]§! as long as auto-influence is enabled.\n"
  influence_remove_auto_request_TT: "§H[ROOT.GetNameWithFlag]§! will no longer auto-influence §H[PREV.GetNameWithFlag]§!.\n"
  auto_influencer_cost_effect: "Auto-Influencer Daily Cost"
- aid_button_TT: "§HGive Economic Aid§!\nWe will send a one-time monetary gift to §H[FROM.GetNameWithFlag]§! in return for influence and a boost in relations. The gift is §Y5%§! of the §H[FROM.GetAdjective]§! debt.\n\nIf the AI is in a good position they will deny the aid.\n"
+ aid_button_TT: "§HGive Economic Aid§!\nWe will send a one-time monetary gift to §H[FROM.GetNameWithFlag]§! in return for influence and a boost in relations. The gift is §Y5%§!, §Y10%§!, or §Y15%§! of the §H[FROM.GetAdjective]§! GDP.\n\nIf the AI is in a good position they will deny the aid.\n"
  aid_button_delayed_TT: "§HRequires:§!\n[!opt_aid_button_click_enabled]\n§HEffect:§!\n§H[ROOT.GetNameWithFlag]§!: Launches §HGive Aid§! event\n\nYou can send §HEconomic Aid§! once every §H30§! days in this nation.\n"
  influence_aid_button_TT: "Has not recently sent economic aid to §H[PREV.GetNameWithFlag]§!\n"
  aid_military_button_TT: "§HMilitary Aid§!\nWe can choose to send a one-time shipment of guns or other equipment to §H[FROM.GetNameWithFlag]§! in return for influence, and boost in relations. However, this will negatively impact our standing with any of their enemies. You can send military aid once every sixty days.\n\nNOTE: You can only ship out APC/IFVs, and Infantry Equipment until we can find a better way of designing the system. Sorry!"
@@ -87,8 +87,7 @@
  make_puppet_button_TT: "§HTurn into Puppet§!\nIf we have enough influence in §H[FROM.GetNameWithFlag]§! as well as them having the same world outlook as us, we can make them into our puppets. This will harm relations with their neighbors and create world tension."
  make_puppet_button_delayed_TT: "§HRequires:§!\n[!opt_make_puppet_button_click_enabled]\n§HEffect:§!\n[!opt_make_puppet_button_click]"
 
- influence_0_TT: "§HTreasury§!: -$$[?FROM.gift_sum] billions\n"
- influence_from_0_TT: "§HTreasury§!: +$$[?gift_sum] billions\n"
+ economic_aid_influence_value_TT: "§HTreasury§!: $$[?temp_amount_gift_sum|+] billions\n"
 
  created_puppet_loc: "Set up Puppet Regime"
 
@@ -109,7 +108,7 @@
  is_top_influencer_twenty_percent: "All of the following must be true:\n§H[ROOT.GetNameWithFlag]§! > 20% influence\n§H[ROOT.GetNameWithFlag]§! is the top influencer in §Y[FROM.GetNameWithFlag]§!"
  gdp_greater_than_other: "Our GDP/C (Current: [?ROOT.gdp_per_capita]k) > §Y[FROM.GetNameWithFlag]§! GDP/C (Current: [?FROM.gdp_per_capita]k)"
  more_civs_than_other: "§H[ROOT.GetNamewithFlag]§! (Current: [?ROOT.num_of_civilian_factories|Y0]) has more §H$industrial_complex$§! than §H[FROM.GetNameWithFlag]§! (Current: [?FROM.num_of_civilian_factories|Y0])"
- gdp_total_cannot_be_double_ours: "The Debtor's GDP Cannot Exceed Our GDP (Current GDP: $$[?ROOT.gdp_total|Y0]b) by Double. (Current §H[FROM.GetName]§! GDP: $$[?FROM.gdp_total|Y0]b)"
+ gdp_total_cannot_be_double_ours: "The Target Nation's GDP Cannot Exceed Our GDP (Current GDP: $$[?ROOT.gdp_total|Y0]b) by Double. (Current §H[FROM.GetName]§! GDP: $$[?FROM.gdp_total|Y0]b)"
 
  influence_higher_5_tt: "§H[ROOT.GetNameWithFlag]§! has more than 5% influence"
  influence_higher_10_tt: "§H[ROOT.GetNameWithFlag]§! has more than 10% influence"
