@@ -335,7 +335,9 @@
  arctic_council: "Arctic Council Member"
  one_china_policy: "Both parties adhere to the One China Policy"
  expansionist_agenda: "Fears over expansionist agenda"
- given_gift: "Gave economic aid"
+ given_gift: "Gave 5% of GDP Economic Aid"
+ given_gift_ten: "Gave 10% of GDP Economic Aid"
+ given_gift_fifteen: "Gave 15% of GDP Economic Aid"
  supported_opposition: "Supported Opposition"
  puppeted_neighbor: "Puppeted our neighbor"
  attacked_our_influence: "Attacked our Influence"
