@@ -546,10 +546,12 @@
  news.82.b: "China is really that powerful!"
 
  ### Economic Stuff ###
- influence.1.t: "Economic aid to [From.GetName]?"
- influence.1.d: "Should we give a gift of $$[?From.gift_sum] billion to [From.GetName]? While our generosity will improve relations and grant us influence, there is no guarantee they will use the economic aid on anything useful.\n\nNote: While multiple successive gifts can be given, only the first will give you any influence."
- influence.1.a: "Give economic aid."
- influence.1.b: "On second thoughts, they don't need it."
+ influence.1.t: "Offer Economic Aid to [From.GetName]?"
+ influence.1.d: "We have elected to begin drafting an Economic Aid package. We can decide to send 5%, 10%, or 15% of our nation's GDP as aid. This generosity will improve relations and grant us influence in [FROM.GetName], though there is no guarantee they will use the economic aid on anything of value. The more we give, the more influence we will gain.\n\n"
+ influence.1.a: "Send 5% of GDP as Economic Aid."
+ influence.1.b: "Send 10% of GDP as Economic Aid."
+ influence.1.c: "Send 15% of GDP as Economic Aid."
+ influence.1.e: "On second thoughts, they don't need it."
 
  News_influence.0.t: "Economic aid given by [From.GetName]!"
  News_influence.0.d: "We have been given $$[?gift_sum] billion in immediate economic aid by [From.GetName]. This has strengthened [Root.GetAdjective]-[From.GetAdjective] Relations, and while the gift officially came without preconditions, it is understood to have strengthened their influence in our country."
