@@ -20,6 +20,7 @@ v1.11.3
   - Increased the migration rate from the open borders idea by 10%
   - Added tourism income to the Kaaba for whomever controls it to represent the massive amount of tourism and pilgrims to the area
   - Pre-Accession Assistance now cancels once you become a member of the European Union
+  - Adjusted Utility Vehicles doctrines that have a armor value to have a hardness value as Utility Vehicles do not have armor
 
  Bugfix:
   - Fixed a German MIO giving piercing despite Small Arms not having piercing
@@ -68,6 +69,7 @@ v1.11.3
   - Added a new Shanghai Cooperation Organization members list GUI
   - Expanded the list of SCO member countries
   - Re-added the J-10 series historical design for China, unlocked by decisions now
+  - Added more options to the Economic Aid event granting more influence for more money and is now based on GDP over debt
 
  Database:
   - Adjusted Ecuador's starting election cycle from 7 years to 4 years
